--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,28 @@
 body {
   text-align: center;
-  margin-top: 150px;
+  margin-top: 10px;
   background-color: #d6d6c5;
+}
+
+.labels {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  padding: 10px;
+  gap: 6px;
+  align-items: center;
+}
+
+.input {
+  border-radius: 6px;
+}
+h1 {
+  padding: 10px;
+  text-align: center;
+}
+
+.btn {
+  width: 120px;
+  height: 40px;
+  border-radius: 6px;
 }
