--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,11 @@ body {
 
 .input {
   border-radius: 6px;
+  height: 30px;
+}
+
+.input:hover {
+  background-color: #d6d6c5;
 }
 h1 {
   padding: 10px;
